jarvis/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jarvis-ingress
  namespace: jarvis
  annotations:
    kubernetes.io/ingress.class: webapprouting
spec:
  ingressClassName: webapprouting
  rules:
    - host: digitalsites.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jarvis-frontend
                port:
                  number: 3000
    - host: www.digitalsites.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jarvis-frontend
                port:
                  number: 3000
    - host: api.digitalsites.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jarvis-backend
                port:
                  number: 8000
